--- a/MyApplication2/app/src/main/res/layout/one_record.xml
+++ b/MyApplication2/app/src/main/res/layout/one_record.xml
@@ -2,17 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content" android:orientation="vertical">
+              android:layout_height="wrap_content" android:orientation="vertical" android:background="@drawable/simple_frame"
+              android:id="@+id/linear_record">
 
 
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:id="@+id/month_label" android:visibility="visible"
+            android:background="@drawable/simple_frame">
+        <TextView
+                android:text="TextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/month"/>
+    </LinearLayout>
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" android:id="@+id/linear_data">
         <TextView
                 android:text="TextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/record_date" android:layout_weight="1"/>
+                android:layout_width="30dp"
+                android:layout_height="wrap_content" android:id="@+id/record_date" android:layout_weight="1" android:textSize="18sp"
+                android:textStyle="bold"/>
         <TextView
                 android:text="TextView"
                 android:layout_width="wrap_content"
