--- a/MyApplication2/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication2/app/src/main/res/layout/activity_main.xml
@@ -21,4 +21,11 @@
             android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.591"
             app:layout_constraintVertical_bias="1.0" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
+    <FrameLayout
+            android:layout_width="395dp"
+            android:layout_height="601dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/navigation" android:id="@+id/frame">
+
+    </FrameLayout>
 </android.support.constraint.ConstraintLayout>
